--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+#Auto-generated stuff
 _site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+
+.idea/vcs.xml
