--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,5 @@ _site/
 .jekyll-cache/
 .jekyll-metadata
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-
-
-.idea/vcs.xml
+# IntelliJ
+.idea/
